Slight style tweaks.

--- a/attpcdaq/static/css/site.css
+++ b/attpcdaq/static/css/site.css
@@ -33,5 +33,5 @@
 .nav-sidebar .active a:hover,
 .nav-sidebar .active a:active {
   color: #fff;
-  background-color: #428bca;
+  background-color: #18bc9c;
 }
