--- a/attpcdaq/static/css/site.less
+++ b/attpcdaq/static/css/site.less
@@ -35,7 +35,7 @@
   .active {
       a, a:hover, a:active {
         color: #fff;
-        background-color: #428bca;
+        background-color: #18bc9c;
       }
   }
 }
