--- a/attpcdaq/templates/base.html
+++ b/attpcdaq/templates/base.html
@@ -46,6 +46,7 @@
                 {% block sidebar %}
                 <ul class="nav nav-sidebar">
                     <li class="{% active request 'status' %}"><a href="{% url 'daq/status' %}">Status</a></li>
+                    <li class="{% active request 'run' %}"><a href="{% url 'daq/run_list' %}">Run metadata</a></li>
                     <li class="{% active request 'sources' %}"><a href="{% url 'daq/data_source_list' %}">Data sources</a></li>
                     <li class="{% active request 'data_router' %}"><a href="{% url 'daq/data_router_list' %}">Data routers</a></li>
                     <li class="{% active request 'ecc' %}"><a href="{% url 'daq/ecc_server_list' %}">ECC servers</a></li>
