--- a/attpcdaq/static/css/site.css
+++ b/attpcdaq/static/css/site.css
@@ -1,21 +1,38 @@
+body {
+  padding-top: 80px;
+  background-color: #efefef;
+  font-family: "Lato", "Helvetica", "Arial", sans-serif;
+}
 #run-control-toolbar {
   display: inline-block;
 }
 .navbar {
   border-radius: 0;
+  height: 50px;
+  border: none;
+}
+.navbar-inverse {
+  background-color: #ffffff;
+}
+.sidebar-app-name {
+  font-size: 150%;
+  height: 50px;
+  color: white;
+  padding-top: 10px;
+  text-align: center;
 }
 .sidebar {
   position: fixed;
-  top: 60px;
+  top: 0;
   bottom: 0;
   left: 0;
   z-index: 1000;
   display: block;
-  padding: 20px;
+  padding: 10px 20px;
   overflow-x: hidden;
   overflow-y: auto;
   /* Scrollable contents if viewport is shorter than content. */
-  background-color: #ecf0f1;
+  background-color: #2b2d42;
   border-right: 1px solid #eee;
 }
 /* Sidebar navigation */
@@ -28,10 +45,44 @@
 .nav-sidebar li > a {
   padding-right: 20px;
   padding-left: 20px;
+  color: #a7a9c5;
+}
+.nav-sidebar li:hover,
+.nav-sidebar li > a:hover {
+  background-color: #2b2d42;
+  border: none;
+  color: white;
 }
 .nav-sidebar .active a,
 .nav-sidebar .active a:hover,
 .nav-sidebar .active a:active {
-  color: #fff;
-  background-color: #18bc9c;
+  color: white;
+  background-color: #2b2d42;
+}
+.nav-sidebar-subnav {
+  margin-right: -21px;
+  /* 20px padding + 1px border */
+  margin-bottom: 20px;
+  margin-left: -20px;
+  padding-left: 50px;
+}
+.nav-sidebar-subnav li > a {
+  padding-right: 20px;
+  padding-left: 20px;
+  color: #a7a9c5;
+}
+.nav-sidebar-subnav li:hover,
+.nav-sidebar-subnav li > a:hover {
+  background-color: #2b2d42;
+  border: none;
+  color: white;
+}
+.nav-sidebar-subnav .active a,
+.nav-sidebar-subnav .active a:hover,
+.nav-sidebar-subnav .active a:active {
+  color: white;
+  background-color: #2b2d42;
+}
+.btn {
+  border-radius: 0;
 }
