--- a/attpcdaq/static/css/site.css
+++ b/attpcdaq/static/css/site.css
@@ -1,6 +1,6 @@
 body {
   padding-top: 80px;
-  background-color: #efefef;
+  background-color: #eff0f4;
   font-family: "Lato", "Helvetica", "Arial", sans-serif;
 }
 #run-control-toolbar {
@@ -12,7 +12,7 @@ body {
   border: none;
 }
 .navbar-inverse {
-  background-color: #ffffff;
+  background-color: #f5f6f8;
 }
 .sidebar-app-name {
   font-size: 150%;
@@ -32,8 +32,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   /* Scrollable contents if viewport is shorter than content. */
-  background-color: #2b2d42;
-  border-right: 1px solid #eee;
+  background-color: #222733;
 }
 /* Sidebar navigation */
 .nav-sidebar {
@@ -45,11 +44,11 @@ body {
 .nav-sidebar li > a {
   padding-right: 20px;
   padding-left: 20px;
-  color: #a7a9c5;
+  color: #99a3bb;
 }
 .nav-sidebar li:hover,
 .nav-sidebar li > a:hover {
-  background-color: #2b2d42;
+  background-color: #222733;
   border: none;
   color: white;
 }
@@ -57,7 +56,7 @@ body {
 .nav-sidebar .active a:hover,
 .nav-sidebar .active a:active {
   color: white;
-  background-color: #2b2d42;
+  background-color: #222733;
 }
 .nav-sidebar-subnav {
   margin-right: -21px;
@@ -69,11 +68,11 @@ body {
 .nav-sidebar-subnav li > a {
   padding-right: 20px;
   padding-left: 20px;
-  color: #a7a9c5;
+  color: #99a3bb;
 }
 .nav-sidebar-subnav li:hover,
 .nav-sidebar-subnav li > a:hover {
-  background-color: #2b2d42;
+  background-color: #222733;
   border: none;
   color: white;
 }
@@ -81,8 +80,16 @@ body {
 .nav-sidebar-subnav .active a:hover,
 .nav-sidebar-subnav .active a:active {
   color: white;
-  background-color: #2b2d42;
+  background-color: #222733;
 }
-.btn {
-  border-radius: 0;
+.panel {
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 4px rgba(0, 0, 0, 0.2);
+}
+.panel-default .panel-heading {
+  background-color: white;
+  font-weight: 300;
+  color: #555555;
+  font-size: 120%;
 }
