--- a/attpcdaq/static/css/site.less
+++ b/attpcdaq/static/css/site.less
@@ -1,8 +1,15 @@
 
 @top-navbar-height: 50px;
-@navcolor: #2B2D42;
-@sidebar-color: #404040;
-@bgcolor: #efefef;
+@navcolor: #222733;
+//@sidebar-color: #404040;
+@bgcolor: lighten(@navcolor, 78%);
+@titlecolor: #555555;
+
+
+.shadow() {
+  box-shadow: 0 1px 2px rgba(0,0,0,0.10), 0 1px 4px rgba(0,0,0,0.20);
+}
+
 
 body {
   padding-top: 80px;
@@ -43,7 +50,6 @@ body {
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
     background-color: @navcolor;
-    border-right: 1px solid #eee;
 }
 
 /* Sidebar navigation */
@@ -78,6 +84,17 @@ body {
   padding-left: 50px;
 }
 
-.btn {
-  border-radius: 0;
+.panel {
+  border: none;
+  border-radius: 5px;
+  .shadow;
+}
+
+.panel-default {
+  .panel-heading {
+    background-color: white;
+    font-weight: 300;
+    color: @titlecolor;
+    font-size: 120%;
+  }
 }
