--- a/attpcdaq/templates/base.html
+++ b/attpcdaq/templates/base.html
@@ -68,8 +68,19 @@
                 {% endblock %}
             </div>
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
-                 {% block breadcrumbs %}
-                 {% endblock %}
+                <div class="navbar navbar-default">
+                    <ul class="nav navbar-nav pull-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
+                                <span class="fa fa-user"></span> {{ user.experiment.name }} ({{ user.username }}) <span class="fa fa-caret-down"></span>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-right">
+                                <li><a href="{% url 'daq/experiment_settings' %}">Experiment settings</a></li>
+                                <li><a href="{% url 'accounts/logout' %}">Log out</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
 
                 {% block body %}
                 {% endblock %}
