Made run timer and info panels more informative.

--- a/attpcdaq/templates/base.html
+++ b/attpcdaq/templates/base.html
@@ -76,6 +76,7 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href="{% url 'daq/experiment_settings' %}">Experiment settings</a></li>
+                                <li><a href="/admin">Administration</a></li>
                                 <li><a href="{% url 'accounts/logout' %}">Log out</a></li>
                             </ul>
                         </li>
