First try at run control.

--- a/attpcdaq/static/css/site.less
+++ b/attpcdaq/static/css/site.less
@@ -107,6 +107,8 @@ body {
 .panel-default {
   .panel-heading {
     background-color: white;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     font-weight: 300;
     color: @titlecolor;
     font-size: 120%;
