--- a/attpcdaq/static/css/site.css
+++ b/attpcdaq/static/css/site.css
@@ -101,6 +101,8 @@ body {
 }
 .panel-default .panel-heading {
   background-color: white;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   font-weight: 300;
   color: #555555;
   font-size: 120%;
